Add JavaDoc comments to classes and public methods
Previously, Aether lacked comprehensive documentation, making it
challenging to understand

Changes made:
* Added JavaDoc comments to all classes and public methods.

These changes improve Aether by providing clear and thorough
documentation, enhancing readability.